 @startuml Diagrama de clases - Entrega 2 - v3

skinparam linetype ortho

Hecho o-right- Multimedia
Hecho o-left- Perfil
Hecho --* FuenteDeDatos
Hecho *-right- Ubicacion
Hecho -up-* SolicitudEliminacion
Multimedia -right- TipoMultimedia
Perfil *-up- Usuario
Usuario -up- Rol
Perfil o-right- SolicitudEliminacion
Solicitud -right- EstadoSolicitud
SolicitudEliminacion <-up- DetectorDeSpam
'FuenteDeDatos --* Coleccion
FuenteProxy *-- HechoParser
FuenteEstatica *-- HechoParser
Criterio -up-* Coleccion
SolicitudEdicion --* Hecho

Coleccion -down- Agregador
Agregador -- FuenteDeDatos
Agregador -- Hecho

'-----------------Hechos----------------
class Hecho {
    +titulo: String
    +descripcion: String
    +categoria: String
    +ubicacion: Ubicacion
    +fechaHecho: Date
    +fechaCarga: Date
    +fechaModificacion: Date
    +fuente: FuenteDeDatos
    +autor: Perfil
    -anonimo: Boolean
    -eliminado: Boolean
    +multimedia : List<Multimedia>
    +metadata: List<String> 
    {method}añadirEtiqueta(metadata:String)
    {method}getNombreAutor() 
}

class Ubicacion{
    +latitud: Float
    +longitud: Float
}

class Multimedia{
    tipo: TipoMultimedia
    +path: String
} 


enum TipoMultimedia {
  FOTO
  VIDEO
  AUDIO
}



'----------- Agregador -------------
class Agregador{
    +fuentesDeDatos: List<FuenteDeDatos>
    +hechos: List<Hecho>
    {method}actualizarHechos()
}



'-----------------Fuentes de datos----------------
interface FuenteDeDatos{
    +nombre: String
    +hechos: List<Hecho>
    {method}agregarHecho()
}

interface HechoParser{
    {method}parsearHecho()
}

'-----------------Fuentes de datos Dinamica----------------
class FuenteDinamica implements FuenteDeDatos{
    {method}agregarHecho(titulo:String, descripcion:String, ubicacion: Ubicacion, categoria: String, multimedia: list<Multimedia>, fecha:Date, anonimidad:Boolean)
}

'-----------------Fuentes de datos Estatica----------------
class FuenteEstatica implements FuenteDeDatos{
    +pathCSV: String
    -parser: HechoParser
    {method}agregarHecho()
}

class CsvHechoParser implements HechoParser{
    {method}parsearHecho()
}

'-----------------Fuentes de datos Proxy----------------

class FuenteProxy implements FuenteDeDatos{
    +endpointBase: String
    -parser: HechoParser
    {method}agregarHecho()
    {method}getHechosDeColeccion()
    {method}solicitarEliminacion()
    
}

class JsonHechoParser implements HechoParser{
    {method}parsearHecho()
}

'-----------------Colecciones----------------

class Coleccion{
    +titulo: String
    +descripcion: String
    +criterioPertenencia: List<Criterio>
    +agregador: Agregador
    +handle: String
    {method}agregarCriterioPertenencia(criterio:Criterio)
    {method}eliminarCriterioPertenencia(criterio:Criterio)
    {method}filtrarPorCriterios(criterios:List<Criterio>)
}

'-------------------Interfaz solicitud--------------------
Abstract Solicitud{
    +hechoAfectado: Hecho
    -estado: EstadoSolicitud
    {method}aceptarSolicitud()
    {method}rechazarSolicitud()
}


'-----------------Solicitud de eliminacion----------------
class SolicitudEliminacion extends Solicitud{
    +motivo: String
}

enum EstadoSolicitud{
    PENDIENTE
    APROBADA
    RECHAZADA
}

interface DetectorDeSpam {
    +esSpam(texto: String): Boolean
}

'-----------------Solicitud de Edicion----------------
class SolicitudEdicion extends Solicitud{
    +tituloMod: String
    +descMod: String
    +categoriaMod: String
    +UbicacionMod: Ubicacion
    +FechaHechoMod: Fecha
    +MultimediaMod: list<Multimedia>
    '+anonimidadMod: Boolean
    +Sugerencia: String
    {method}agregarSugerencia(String: Sugerencia)
}

' ----Usuario rol perfil ----

class Usuario{
    -email: String
    -contraseñaHasheada: String
    +perfil: Perfil
    -rol: List<Rol>
    {method}tieneRol(rol:Rol)
}

enum Rol{
    VISUALIZADOR
    CONTRIBUYENTE
    ADMINISTRADOR
}

class Perfil{
    +nombre: String
    +apellido: String
    +edad: Int
    +solicitudesEliminacion: List<SolicitudEliminacion>
    +solicitudesEdicion: List<SolicitudEdicion>
}

' -----------Criterios-----------------
interface Criterio{ 
    {method}cumple(Hecho)
}
class CriterioFecha implements Criterio{
    +fechaDesde:Date
    +fechaHasta:Date
    {method}cumple(Hecho)
}
class CriterioTitulo implements Criterio{
    +titulo:String 
    {method}cumple(Hecho)
}
class CriterioDescripcion implements Criterio{
    +descripcion:String
    {method}cumple(Hecho)
}
class CriterioCategoria implements Criterio{
    +categoria:String
    {method}cumple(Hecho)
}
class CriterioUbicacion implements Criterio{
    +ubicacion:Ubicacion
    {method}cumple(Hecho)
}
class CriterioOrigen implements Criterio{
    +origen: Class
    {method}cumple(Hecho)
}
class CriterioMultimedia implements Criterio{
    +multimedia:Multimedia
    {method}cumple(Hecho)
}

'enum tipoFuenteDatos{
'    ESTATICA
'    DINAMICA
'    PROXY
'}
@enduml